# jeopardy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  answer.cpp  answer.hpp  answer_screen.cpp  answer_screen.hpp  base64.cpp  base64.hpp  category.cpp  category.hpp  color.cpp  color.hpp  data_event.hpp  data_loader.cpp  data_loader.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  game_state_params.hpp  invalid_event.cpp  invalid_event.hpp  invalid_json.cpp  invalid_json.hpp  jeopardy_exception.cpp  jeopardy_exception.hpp  jeopardy_round.cpp  jeopardy_round.hpp  main.cpp  new_game.cpp  new_game.hpp  player.cpp  player.hpp  round_loader.cpp  round_loader.hpp  scoreboard.cpp  scoreboard.hpp  (+5 more)
json-schema/events/: connect_buzzergroup.json
rounds/testround/: round.json
